fixed contrast

--- a/lesson3/styles/small.css
+++ b/lesson3/styles/small.css
@@ -138,7 +138,7 @@ li {
 }
 
 #accent_color {
-    background-color: #6B78B5;
+    background-color: #6470C5;
 }
 
 #secundary_color {
